Updated data processing code for context-tuning for new RCT datasets.

--- a/merge_adapter.ipynb
+++ b/merge_adapter.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U bitsandbytes transformers peft huggingface_hub"
+    "!pip install -U bitsandbytes transformers peft huggingface_hub sentencepiece protobuf"
    ]
   },
   {
@@ -24,9 +24,9 @@
     "login(token=os.environ.get(\"HF_TOKEN\"))\n",
     "\n",
     "username = 'iamraymondlow'\n",
-    "pretrained_model_name = \"google/gemma-2-27b\"\n",
-    "adapter_name = \"iamraymondlow/gemma-2-27b-instructiontuned-uncensored\"\n",
-    "repo_name = \"gemma-2-27b-instructiontuned-uncensored-merged\"\n",
+    "pretrained_model_name = \"iamraymondlow/llama-31-8b-instructiontuned-uncensored\"\n",
+    "adapter_name = \"iamraymondlow/llama-31-8b-generalhealthcare-contexttuning-lora\"\n",
+    "repo_name = \"llama-31-8b-generalhealthcare-contexttuning-merged\"\n",
     "\n",
     "# Load the pre-trained base model\n",
     "quantization_config = BitsAndBytesConfig(load_in_8bit=True)\n",
@@ -43,6 +43,13 @@
     "merged_model.push_to_hub(repo_name)\n",
     "tokenizer.push_to_hub(repo_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
