Implemented code for preparing HIC survey and RCT datasets for fine-tuning.

--- a/prepare_instruction_tuning_data.ipynb
+++ b/prepare_instruction_tuning_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +176,8 @@
     "            formatted_conversation_list.append({\"messages\":formatted_conversations})\n",
     "\n",
     "# Perform train test split\n",
-    "sampled_conversation_list = random.sample(formatted_conversation_list, TOTAL_SIZE)\n",
-    "train_conversation_list, test_conversation_list = train_test_split(sampled_conversation_list, test_size=TEST_SIZE, random_state=42)\n",
+    "# sampled_conversation_list = random.sample(formatted_conversation_list, TOTAL_SIZE)\n",
+    "# train_conversation_list, test_conversation_list = train_test_split(sampled_conversation_list, test_size=TEST_SIZE, random_state=42)\n",
     "\n",
     "# Create subfolder to store formatted training and validation data for instruction-tuning\n",
     "if not os.path.exists(f\"data/sharegpt_uncensored\"):\n",
@@ -185,20 +185,30 @@
     "    os.makedirs(f\"data/sharegpt_uncensored\")\n",
     "\n",
     "# Write the formatted conversation lists locally (in CSV format or JSONL format)\n",
-    "if DATA_FORMAT == \"csv\":\n",
-    "    # Write the formatted conversation lists to a CSV file\n",
-    "    train_conversation_list = [json.dumps(conversation) for conversation in train_conversation_list]\n",
-    "    train_conversation_df = pd.DataFrame(train_conversation_list, columns=[\"text\"])\n",
-    "    train_conversation_df.to_csv(\"data/sharegpt_uncensored/train.csv\", index=False)\n",
+    "train_conversation_list = [json.dumps(conversation) for conversation in formatted_conversation_list]\n",
+    "train_conversation_df = pd.DataFrame(train_conversation_list, columns=[\"text\"])\n",
+    "train_conversation_df.to_csv(\"data/sharegpt_uncensored/train_full.csv\", index=False)\n",
+    "# if DATA_FORMAT == \"csv\":\n",
+    "#     # Write the formatted conversation lists to a CSV file\n",
+    "#     train_conversation_list = [json.dumps(conversation) for conversation in train_conversation_list]\n",
+    "#     train_conversation_df = pd.DataFrame(train_conversation_list, columns=[\"text\"])\n",
+    "#     train_conversation_df.to_csv(\"data/sharegpt_uncensored/train.csv\", index=False)\n",
     "\n",
-    "    test_conversation_list = [json.dumps(conversation) for conversation in test_conversation_list]\n",
-    "    test_conversation_df = pd.DataFrame(test_conversation_list, columns=[\"text\"])\n",
-    "    test_conversation_df.to_csv(\"data/sharegpt_uncensored/test.csv\", index=False)\n",
+    "#     test_conversation_list = [json.dumps(conversation) for conversation in test_conversation_list]\n",
+    "#     test_conversation_df = pd.DataFrame(test_conversation_list, columns=[\"text\"])\n",
+    "#     test_conversation_df.to_csv(\"data/sharegpt_uncensored/test.csv\", index=False)\n",
     "\n",
-    "else:\n",
-    "    write_jsonl(train_conversation_list, \"data/sharegpt_uncensored/train.jsonl\")\n",
-    "    write_jsonl(test_conversation_list, \"data/sharegpt_uncensored/valid.jsonl\")"
+    "# else:\n",
+    "#     write_jsonl(train_conversation_list, \"data/sharegpt_uncensored/train.jsonl\")\n",
+    "#     write_jsonl(test_conversation_list, \"data/sharegpt_uncensored/valid.jsonl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
