--- a/prepare_instruction_tuning_data.ipynb
+++ b/prepare_instruction_tuning_data.ipynb
@@ -16,11 +16,8 @@
     "import json\n",
     "import os\n",
     "import pandas as pd\n",
-    "import random\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "RANDOM_STATE = 42\n",
-    "DATA_FORMAT = \"csv\"  # csv, jsonl\n",
     "TEST_SIZE = 0.2\n",
     "TOTAL_SIZE = 12500\n",
     "\n",
@@ -116,33 +113,17 @@
     "for conversations in censored_data:\n",
     "    formatted_conversations = format_conversation(conversations[\"conversations\"])\n",
     "    if formatted_conversations is not None and formatted_conversations != []:\n",
-    "        if DATA_FORMAT == \"csv\":\n",
-    "            formatted_conversation_list.append(formatted_conversations)\n",
-    "        else:\n",
-    "            formatted_conversation_list.append({\"messages\":formatted_conversations})\n",
-    "\n",
-    "# Perform train test split\n",
-    "sampled_conversation_list = random.sample(formatted_conversation_list, TOTAL_SIZE)\n",
-    "train_conversation_list, test_conversation_list = train_test_split(sampled_conversation_list, test_size=TEST_SIZE, random_state=42)\n",
+    "        formatted_conversation_list.append(formatted_conversations)\n",
     "\n",
     "# Create subfolder to store formatted training and validation data for instruction-tuning\n",
     "if not os.path.exists(f\"data/sharegpt_censored\"):\n",
     "    # Create the folder\n",
     "    os.makedirs(f\"data/sharegpt_censored\")\n",
     "\n",
-    "# Write the formatted conversation lists locally (in CSV format or JSONL format)\n",
-    "if DATA_FORMAT == \"csv\":\n",
-    "    train_conversation_list = [json.dumps(conversation) for conversation in train_conversation_list]\n",
-    "    train_conversation_df = pd.DataFrame(train_conversation_list, columns=[\"text\"])\n",
-    "    train_conversation_df.to_csv(\"data/sharegpt_censored/train.csv\", index=False)\n",
-    "\n",
-    "    test_conversation_list = [json.dumps(conversation) for conversation in test_conversation_list]\n",
-    "    test_conversation_df = pd.DataFrame(test_conversation_list, columns=[\"text\"])\n",
-    "    test_conversation_df.to_csv(\"data/sharegpt_censored/test.csv\", index=False)\n",
-    "\n",
-    "else:\n",
-    "    write_jsonl(train_conversation_list, \"data/sharegpt_censored/train.jsonl\")\n",
-    "    write_jsonl(test_conversation_list, \"data/sharegpt_censored/valid.jsonl\")"
+    "# Write the formatted conversation lists locally (in CSV format)\n",
+    "train_conversation_list = [json.dumps(conversation) for conversation in formatted_conversation_list]\n",
+    "train_conversation_df = pd.DataFrame(train_conversation_list, columns=[\"text\"])\n",
+    "train_conversation_df.to_csv(\"data/sharegpt_censored/train.csv\", index=False)"
    ]
   },
   {
@@ -170,45 +151,18 @@
     "for conversations in uncensored_data:\n",
     "    formatted_conversations = format_conversation(conversations[\"conversations\"])\n",
     "    if formatted_conversations is not None and formatted_conversations != []:\n",
-    "        if DATA_FORMAT == \"csv\":\n",
-    "            formatted_conversation_list.append(formatted_conversations)\n",
-    "        else:\n",
-    "            formatted_conversation_list.append({\"messages\":formatted_conversations})\n",
-    "\n",
-    "# Perform train test split\n",
-    "# sampled_conversation_list = random.sample(formatted_conversation_list, TOTAL_SIZE)\n",
-    "# train_conversation_list, test_conversation_list = train_test_split(sampled_conversation_list, test_size=TEST_SIZE, random_state=42)\n",
+    "        formatted_conversation_list.append(formatted_conversations)\n",
     "\n",
     "# Create subfolder to store formatted training and validation data for instruction-tuning\n",
     "if not os.path.exists(f\"data/sharegpt_uncensored\"):\n",
     "    # Create the folder\n",
     "    os.makedirs(f\"data/sharegpt_uncensored\")\n",
     "\n",
-    "# Write the formatted conversation lists locally (in CSV format or JSONL format)\n",
+    "# Write the formatted conversation lists to a CSV file\n",
     "train_conversation_list = [json.dumps(conversation) for conversation in formatted_conversation_list]\n",
     "train_conversation_df = pd.DataFrame(train_conversation_list, columns=[\"text\"])\n",
-    "train_conversation_df.to_csv(\"data/sharegpt_uncensored/train_full.csv\", index=False)\n",
-    "# if DATA_FORMAT == \"csv\":\n",
-    "#     # Write the formatted conversation lists to a CSV file\n",
-    "#     train_conversation_list = [json.dumps(conversation) for conversation in train_conversation_list]\n",
-    "#     train_conversation_df = pd.DataFrame(train_conversation_list, columns=[\"text\"])\n",
-    "#     train_conversation_df.to_csv(\"data/sharegpt_uncensored/train.csv\", index=False)\n",
-    "\n",
-    "#     test_conversation_list = [json.dumps(conversation) for conversation in test_conversation_list]\n",
-    "#     test_conversation_df = pd.DataFrame(test_conversation_list, columns=[\"text\"])\n",
-    "#     test_conversation_df.to_csv(\"data/sharegpt_uncensored/test.csv\", index=False)\n",
-    "\n",
-    "# else:\n",
-    "#     write_jsonl(train_conversation_list, \"data/sharegpt_uncensored/train.jsonl\")\n",
-    "#     write_jsonl(test_conversation_list, \"data/sharegpt_uncensored/valid.jsonl\")"
+    "train_conversation_df.to_csv(\"data/sharegpt_uncensored/train.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
