Updated sampling approach for pilot dataset (duch 2023) for S6 and S7.

--- a/prepare_context_tuning_data.ipynb
+++ b/prepare_context_tuning_data.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os\n",
     "import json\n",
     "import random\n",
@@ -710,13 +711,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Treatment distribution (counts / %) ===\n",
+      "            full_count  full_pct  train_count  train_pct  holdout_count  \\\n",
+      "treatment                                                                 \n",
+      "CDC Health         473     15.38          237      15.41            236   \n",
+      "High Cash          510     16.59          255      16.58            255   \n",
+      "Low Cash           548     17.82          274      17.82            274   \n",
+      "Placebo           1544     50.21          772      50.20            772   \n",
+      "\n",
+      "            holdout_pct  \n",
+      "treatment                \n",
+      "CDC Health        15.35  \n",
+      "High Cash         16.59  \n",
+      "Low Cash          17.83  \n",
+      "Placebo           50.23  \n"
+     ]
+    }
+   ],
    "source": [
     "RANDOM_STATE = 42\n",
     "DATA = \"duch_et_al_2023_vaccine_financial_vaccination_status_training\"\n",
-    "WITH_INTENTION = False\n",
+    "WITH_INTENTION = True\n",
+    "TRAINING_FRAC = 0.5\n",
     "\n",
     "if WITH_INTENTION:\n",
     "    demographic_questions = [\n",
@@ -790,6 +814,106 @@
     "    \"High Cash\": \"Health authorities are working hard to distribute the COVID-19 vaccines free for everyone with no strings attached. COVID-19 vaccines are safe and effective. After you have been fully vaccinated you can resume activities that you did prior to the pandemic. If you have at least one COVID-19 vaccine shot you will receive 60 Cedi. If you get vaccinated, you will get rewarded.\\n\\nWe indicated that we will follow up with you in 6 weeks.  We will contact you in order to verify your vaccination status. If you can provide us with your COVID-19 vaccination carnet at the time, we will upload a copy of the vaccination carnet to our secure server for verification and you will be paid your 60 Cedi via cell phone money payment or by cash if you prefer.\",\n",
     "}\n",
     "\n",
+    "def stratified_split_by_treatment(\n",
+    "    df: pd.DataFrame,\n",
+    "    treatment_col: str = \"treatment\",\n",
+    "    target_outcomes: list = None,\n",
+    "    train_frac: float = 0.10,\n",
+    "    random_state: int = 42,\n",
+    "    min_per_class: int = 1,\n",
+    "    verbose: bool = True,\n",
+    "):\n",
+    "    if treatment_col not in df.columns:\n",
+    "        raise ValueError(f\"`{treatment_col}` not found in DataFrame.\")\n",
+    "    if target_outcomes is None:\n",
+    "        target_outcomes = []\n",
+    "\n",
+    "    # 1) Filter first (this becomes the \"full\" dataset for distribution calcs)\n",
+    "    if target_outcomes:\n",
+    "        mask_valid = ~df[target_outcomes].isnull().any(axis=1)\n",
+    "        full_df = df.loc[mask_valid].copy()\n",
+    "    else:\n",
+    "        full_df = df.copy()\n",
+    "\n",
+    "    if full_df.empty:\n",
+    "        raise ValueError(\"No rows remaining after filtering for complete target outcomes.\")\n",
+    "\n",
+    "    work = full_df.copy()\n",
+    "\n",
+    "    # 2) Sizes\n",
+    "    n_total = len(work)\n",
+    "    n_train_target = int(round(train_frac * n_total))\n",
+    "    if n_train_target <= 0:\n",
+    "        raise ValueError(\"`train_frac` too small for dataset size.\")\n",
+    "\n",
+    "    # 3) Distribution over treatment\n",
+    "    full_counts = work[treatment_col].value_counts(dropna=False).sort_index()\n",
+    "\n",
+    "    # desired allocations (float) from full distribution\n",
+    "    desired_from_full = (full_counts * (n_train_target / full_counts.sum())).astype(float)\n",
+    "\n",
+    "    # 4) Integer allocations with minimums enforced\n",
+    "    floors = {k: int(np.floor(v)) for k, v in desired_from_full.items()}\n",
+    "    for k in floors:\n",
+    "        if full_counts[k] > 0 and n_train_target >= len(full_counts):\n",
+    "            floors[k] = max(floors[k], min_per_class)\n",
+    "            floors[k] = min(floors[k], int(full_counts[k]))\n",
+    "\n",
+    "    allocated = floors.copy()\n",
+    "    remaining = n_train_target - sum(allocated.values())\n",
+    "\n",
+    "    # 5) Distribute leftovers by largest fractional remainder\n",
+    "    remainders = sorted(\n",
+    "        ((desired_from_full[k] - floors[k], k) for k in desired_from_full.index),\n",
+    "        reverse=True\n",
+    "    )\n",
+    "    i = 0\n",
+    "    while remaining > 0 and any(allocated[k] < full_counts[k] for _, k in remainders):\n",
+    "        _, k = remainders[i % len(remainders)]\n",
+    "        if allocated[k] < full_counts[k]:\n",
+    "            allocated[k] += 1\n",
+    "            remaining -= 1\n",
+    "        i += 1\n",
+    "\n",
+    "    if verbose:\n",
+    "        shortfall = n_train_target - sum(allocated.values())\n",
+    "        if shortfall != 0:\n",
+    "            print(f\"[Warning] Could not allocate all requested training rows \"\n",
+    "                  f\"(requested={n_train_target}, allocated={n_train_target - shortfall}).\")\n",
+    "\n",
+    "    # 6) Sample rows per treatment\n",
+    "    rng = np.random.RandomState(random_state)\n",
+    "    train_idx = []\n",
+    "    for bucket, n_take in allocated.items():\n",
+    "        if n_take <= 0:\n",
+    "            continue\n",
+    "        bucket_idx = work.index[work[treatment_col] == bucket]\n",
+    "        if n_take > len(bucket_idx):\n",
+    "            n_take = len(bucket_idx)\n",
+    "        chosen = rng.choice(bucket_idx, size=n_take, replace=False)\n",
+    "        train_idx.extend(chosen.tolist())\n",
+    "\n",
+    "    training_df = full_df.loc[sorted(train_idx)].copy()\n",
+    "    holdout_df = full_df.drop(train_idx).copy()\n",
+    "\n",
+    "    # 7) (Optional) Reporting\n",
+    "    if verbose:\n",
+    "        def _dist(series, name):\n",
+    "            c = series.value_counts(dropna=False).reindex(full_counts.index, fill_value=0)\n",
+    "            denom = max(int(c.sum()), 1)\n",
+    "            p = (c / denom) * 100\n",
+    "            return pd.DataFrame({f\"{name}_count\": c, f\"{name}_pct\": p.round(2)})\n",
+    "\n",
+    "        full_dist = _dist(work[treatment_col], \"full\")\n",
+    "        train_dist = _dist(work.loc[training_df.index, treatment_col], \"train\")\n",
+    "        hold_dist = _dist(work.loc[holdout_df.index, treatment_col], \"holdout\")\n",
+    "\n",
+    "        report = pd.concat([full_dist, train_dist, hold_dist], axis=1)\n",
+    "        print(\"\\n=== Treatment distribution (counts / %) ===\")\n",
+    "        print(report.fillna(0))\n",
+    "\n",
+    "    return training_df, holdout_df\n",
+    "\n",
     "\n",
     "def format_duch_2023_system_prompt(row: pd.Series) -> str:\n",
     "    final_system_prompt = system_prompt.format(\n",
@@ -820,8 +944,15 @@
     "data = pd.read_csv(f\"data/{DATA}.csv\", header=1)\n",
     "data[target_outcomes] = data[target_outcomes].replace(\"NA\", None)\n",
     "\n",
-    "# Perform fine-tuning data (10%) and holdout data (90%) split\n",
-    "training_data, holdout_data = train_test_split(data, test_size=0.9, random_state=RANDOM_STATE)\n",
+    "# Perform stratified split into training and holdout sets\n",
+    "training_data, holdout_data = stratified_split_by_treatment(\n",
+    "    data,\n",
+    "    treatment_col=\"treatment\",\n",
+    "    target_outcomes=[\"Have you actually received a COVID-19 vaccine and can this be verified in the records of the Ghanaian District Health Offices?\"],   # ensures training has no missing targets\n",
+    "    train_frac=TRAINING_FRAC,\n",
+    "    random_state=RANDOM_STATE,\n",
+    "    verbose=True,\n",
+    ")\n",
     "\n",
     "# Construct system and question prompts\n",
     "training_data_finetune = training_data[demographic_questions + target_outcomes + [\"treatment\"]].copy()\n",
