Included data preparation for Duch 2023 synthetic data for heterogenity analysis.

--- a/prepare_context_tuning_data.ipynb
+++ b/prepare_context_tuning_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,6 +1143,103 @@
     "\n",
     "# Save files in CSV format\n",
     "finetune_data[[\"text\"]].to_csv(f\"data/{data_folder_dir}/train.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Duch et al. 2023 - Synthetic (Heterogenenity Analysis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM_STATE = 42\n",
+    "DATA = \"duch_2023_sim_data_training\"\n",
+    "\n",
+    "renamed_columns = {\n",
+    "    \"p_i_Q2.2\":\"What is your current age?\",\n",
+    "    \"p_i_Q2.3\":\"What is your gender?\",\n",
+    "    \"p_i_Q2.5\":\"What is the highest educational qualification you have completed?\",\n",
+    "    \"p_i_Q143\":\"What is your current working situation?\",\n",
+    "    \"p_i_Q144\":\"How much (in Ghanaian Cedis) on average does your household spend in a typical week on food?\",\n",
+    "    \"ActVacApril\":\"Have you actually received a COVID-19 vaccine and can this be verified in the records of the Ghanaian District Health Offices?\",\n",
+    "}\n",
+    "\n",
+    "demographic_questions = [\n",
+    "    \"What is your current age?\",\n",
+    "    \"What is your gender?\",\n",
+    "    \"What is the highest educational qualification you have completed?\",\n",
+    "    \"What is your current working situation?\",\n",
+    "    \"How much (in Ghanaian Cedis) on average does your household spend in a typical week on food?\",   \n",
+    "]\n",
+    "\n",
+    "target_outcome = \"Have you actually received a COVID-19 vaccine and can this be verified in the records of the Ghanaian District Health Offices?\"\n",
+    "\n",
+    "system_prompt = \"\"\"Please put yourself in the shoes of a human subject participating in a healthcare survey in Ghana about the COVID-19 vaccine. You will be provided with a demographic profile that describes your age, gender, highest education level you achieved, current employment situation, and average household spending. The information will be provided to you in the format of a survey interview. You will see a question from the “Interviewer:” and then your human subject response will be preceded by “Me:”. Lastly, you will watch a video. Thereafter, you will be asked whether you received the COVID-19 vaccination. Please provide a consistent and coherent response using all the information provided. It is crucial for you to accurately replicate the response of a human subject that has the demographic profile you are provided. The human subject response will vary depending on their demographic profile. If you are unsure of an answer, provide a plausible response that is based on all of the information available to you. Respond to each question in the exact format specified and do not add any information beyond what is requested.\n",
+    "\n",
+    "Your demographic profile:\n",
+    "{demographic_prompt}\n",
+    "\n",
+    "You are asked to watch a video at this point. Here you are provided with the transcript of the video. You have to read the full transcript in order to continue the survey:\n",
+    "{treatment_prompt}\n",
+    "\"\"\"\n",
+    "\n",
+    "treatment_transcript = {\n",
+    "    \"CDC Health\": \"Health authorities are working hard to distribute the COVID-19 vaccines free for everyone with no strings attached. COVID 19 vaccines are safe and effective. After you have been fully vaccinated you can resume activities that you did prior to the pandemic. Getting the COVID-19 vaccine will help prevent you from getting COVID-19 and reduce your risk of being hospitalized with COVID-19. COVID 19 vaccine help you to protect yourself your environment and your loved ones from COVID-19 exposure.\\n\\nWe indicated that we will follow up with you in 6 weeks. We will contact you in order to verify your vaccination status. If you can provide us with your COVID-19 vaccination carnet at the time, we will upload a copy of the vaccination carnet to our secure server for verification\",\n",
+    "    \"Placebo\": \"The Sun lights up our lives for business for education even for socializing but when the Sun sets many people use candles who are quality battery-operated torches and kerosene lamps as inefficient and expensive ways to create light. What if you can take some Sun with you at night?  You can with portable solar products there are different types, but each portable solar product is made up of three basic parts: a small solar panel, a modern rechargeable battery and an LED bulb. The solar panel catches the light from the Sun and stores this energy in the battery. This can now be used for much needed light when it's dark. Many can even charge phones portable solar products should be reliable affordable and warranted be sure to demand top quality solar products look for these products lighting Africa shining the way.\\n\\nWe indicated that we will follow up with you in 6 weeks. We will contact you in order to verify your vaccination status.  If you can provide us with your COVID-19 vaccination carnet at the time, we will upload a copy of the vaccination carnet to our secure server for verification.\",\n",
+    "    \"Low Cash\": \"Health authorities are working hard to distribute the COVID-19 vaccines free for everyone with no strings attached. COVID-19 vaccines are safe and effective. After you have been fully vaccinated you can resume activities that you did prior to the pandemic. If you have at least one COVID-19 vaccine shot you will receive 20 Cedi. If you get vaccinated, you will get rewarded.\\n\\nWe indicated that we will follow up with you in 30 days.  We will contact you in order to verify your vaccination status. If you can provide us with your COVID-19 vaccination carnet at the time, we will upload a copy of the vaccination carnet to our secure server for verification and you will be paid your 20 Cedi via cell phone money payment or by cash if you prefer.\",\n",
+    "    \"High Cash\": \"Health authorities are working hard to distribute the COVID-19 vaccines free for everyone with no strings attached. COVID-19 vaccines are safe and effective. After you have been fully vaccinated you can resume activities that you did prior to the pandemic. If you have at least one COVID-19 vaccine shot you will receive 60 Cedi. If you get vaccinated, you will get rewarded.\\n\\nWe indicated that we will follow up with you in 6 weeks.  We will contact you in order to verify your vaccination status. If you can provide us with your COVID-19 vaccination carnet at the time, we will upload a copy of the vaccination carnet to our secure server for verification and you will be paid your 60 Cedi via cell phone money payment or by cash if you prefer.\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def format_duch_2023_synthetic_system_prompt(row: pd.Series) -> str:\n",
+    "    final_system_prompt = system_prompt.format(\n",
+    "        demographic_prompt=row[\"demographic_prompt\"],\n",
+    "        treatment_prompt=treatment_transcript[row[\"individual_treatment\"]],\n",
+    "    )\n",
+    "\n",
+    "    return final_system_prompt\n",
+    "\n",
+    "\n",
+    "def format_duch_2023_synthetic_user_prompt(row: pd.Series, target_outcome) -> str:\n",
+    "    question_prompt = f\"{target_outcome} Please give your response to the question in the structured format below:\\nQuestion: [Yes/No]\"\n",
+    "\n",
+    "    prompt = [{\"role\":\"system\",\"content\":row[\"system_prompt\"]},\n",
+    "              {\"role\":\"user\",\"content\":question_prompt},\n",
+    "              {\"role\":\"assistant\",\"content\":row[target_outcome]}\n",
+    "            ]\n",
+    "        \n",
+    "    # Convert the prompt list to a JSON-formatted string\n",
+    "    prompt_string = json.dumps(prompt)\n",
+    "\n",
+    "    return prompt_string\n",
+    "    \n",
+    "\n",
+    "# Load data\n",
+    "data = pd.read_csv(f\"data/{DATA}.csv\")\n",
+    "data.rename(columns=renamed_columns, inplace=True)\n",
+    "data[target_outcome] = data[target_outcome].replace(\"NA\", None)\n",
+    "\n",
+    "# Construct system and question prompts\n",
+    "data = data[demographic_questions + [target_outcome, \"individual_treatment\"]].copy()\n",
+    "data[\"demographic_prompt\"] = data.apply(generate_demographic_prompt, axis=1, args=([target_outcome, \"individual_treatment\"],))\n",
+    "data[\"system_prompt\"] = data.apply(format_duch_2023_synthetic_system_prompt, axis=1)\n",
+    "\n",
+    "# Format data for fine-tuning\n",
+    "data[\"text\"] = data.apply(format_duch_2023_synthetic_user_prompt, axis=1, args=(target_outcome,))\n",
+    "\n",
+    "# Save files in CSV format\n",
+    "data_folder_dir = DATA\n",
+    "if not os.path.exists(f\"data/{data_folder_dir}\"):\n",
+    "    # Create the folder\n",
+    "    os.makedirs(f\"data/{data_folder_dir}\")\n",
+    "\n",
+    "data[[\"text\"]].to_csv(f\"data/{data_folder_dir}/train.csv\", index=False)"
    ]
   },
   {
